# lidar-ros2

./: .envrc  .gitignore  Pipfile  README.md  frames_2026-03-19_12.15.43.gv
bags/: README.md
results/: metrics_2026-01-29_12-02-53.csv  metrics_2026-01-29_14-19-39.csv  metrics_2026-01-29_21-38-23.csv  metrics_2026-01-30_09-21-26.csv  metrics_2026-01-30_09-27-51.csv  metrics_2026-01-30_10-30-09.csv  metrics_2026-01-30_10-35-08.csv  metrics_2026-02-01_20-36-00.csv  metrics_2026-02-04_13-10-32.csv  metrics_2026-02-09_16-12-10.csv  metrics_2026-02-09_18-39-39.csv  metrics_2026-02-11_14-20-51.csv  metrics_2026-02-11_14-22-05.csv  metrics_2026-02-11_14-40-01.csv  metrics_2026-02-11_14-42-12.csv  metrics_2026-02-11_15-45-45.csv  metrics_2026-02-11_16-04-13.csv  metrics_2026-02-11_16-07-01.csv  metrics_2026-02-12_22-26-57.csv  metrics_2026-02-12_22-46-13.csv  metrics_2026-02-18_10-45-27.csv  metrics_2026-02-18_12-32-06.csv  metrics_2026-02-18_12-34-24.csv  metrics_2026-02-18_12-45-08.csv  metrics_2026-02-18_12-53-55.csv  metrics_2026-02-18_14-00-16.csv  metrics_2026-03-17_14-25-06.csv  metrics_2026-03-17_14-37-57.csv  metrics_2026-03-19_11-19-55.csv  metrics_2026-03-19_11-23-08.csv  metrics_2026-03-19_11-43-18.csv  metrics_2026-03-19_13-49-45.csv  metrics_2026-03-19_13-55-36.csv  metrics_2026-03-19_14-11-28.csv  metrics_2026-03-19_14-12-18.csv  metrics_2026-03-19_14-17-58.csv  metrics_2026-03-19_14-18-57.csv  metrics_2026-03-19_14-23-44.csv  metrics_2026-03-19_14-26-32.csv  metrics_2026-03-19_14-40-48.csv  (+11 more)
rviz/: bag_compare.rviz
src/lidar_bringup/: CMakeLists.txt  package.xml
src/lidar_bringup/config/: dbscan_fused.yaml  detector_cpp.yaml  fusion.yaml  tracker.yaml
src/lidar_bringup/launch/: bag_fusion_detection.launch.xml  dbscan_fused.launch.xml  dbscan_per_sensor.launch.xml  live_fusion_detection.launch.xml  live_sensor.launch.xml  live_tracking.launch.xml  pcl_fused.launch.xml  pcl_per_sensor.launch.xml
src/lidar_cpp_pkg/: CMakeLists.txt  package.xml
src/lidar_cpp_pkg/src/: cloud_filter.cpp  cloud_monitor.cpp  object_detector_pcl.cpp
src/lidar_description/: CMakeLists.txt  package.xml
src/lidar_py_pkg/: package.xml  setup.py
tuner/: param_tuner.py
(+11 files in other folders)
